style.css
.top-section{
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    max-width: 750px;
    margin-bottom: 40px;
}

.profile-image{
    width: 250px;
    height: auto;
}

.mid-section{
    max-width: 600px;
}

h1{
    color: #ffffff;
}

body{
    background-color: #1a1a1a;
    color: #ffffff;
}

